# hello-tinyrenderer

./: .gitignore  CMakeLists.txt
day00/: test-cmake.cpp  test-tgaimage.cpp  tgaimage.h
day01/: README.md  test-draw-head.cpp  test-tgaimage-01.cpp
